# idea2real

./: .flake8  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  HUMANS.md  Makefile  README.md  ag  agentic.sh  delorean_v1.blend  docker-compose.yml  nb3dp_addon.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/skills/agentic-solo-operator/: SKILL.md
.claude/skills/github-project-execution/: SKILL.md
.claude/skills/nano-banana-3d-print/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: slice.yml
.github/workflows/: ci.yml  pr-review.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  env.ts  index.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: App.tsx  router.tsx  test-setup.ts  theme.ts
docs/: ARCHITECTURE.md
docs/project/: AGENTIC_CONTROL_PANEL.md  COMPANY_AGENTIC_SHOWCASE.md  DEVELOPMENT_PLAN.md  FRONTEND_UI_DIRECTION.md  LOCAL_PARALLEL_WORKFLOW.md  MEANINGFUL_TDD_PLAYBOOK.md  PARALLEL_AGENT_EXECUTION.md  README.md  SECURITY_BASELINE.md  SECURITY_CONTINUATION_GUIDE.md
poc/bttf-fdm/: RESULTS.md  blender-mcp-call.py
poc/bttf-fdm-v2/: RESULTS.md
poc/bttf-fdm-v2/blender/: delorean-regular-raw.blend
prompts/: delorean-high-contrast.md  delorean-nano-banana-prompts.md
scripts/: agentic-legacy.sh  bootstrap.sh  cleanup-slice-worktree.sh  compare-providers.py  create-p0-issues.sh  create-security-issues.sh  finish-slice-session.sh  generate-hc-references.py  gh-bootstrap.sh  new-slice-worktree.sh  start-agent-session.sh
scripts/dev/: run-worker.sh  seed-phase1.sh
services/geometry/: Dockerfile  pyproject.toml
services/geometry/app/: main.py  schemas.py
services/geometry/app/export/: __init__.py  stl.py
services/geometry/app/pipeline/: __init__.py  operations.py
services/geometry/tests/: test_cleanup_pipeline.py  test_cleanup_stub.py  test_health.py  test_http_security.py  test_security_limits.py  test_stl_export.py  test_upload_security.py
tests/: test_compare_providers.py  test_generate_references.py  test_infra.py
tools/agentic-control/: README.md  package.json  tsconfig.json
(+147 files in other folders)
