[project]
name = "idea2real"
version = "0.1.0"
description = "Blender addon: turn any image into a 3D-printable STL"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyyaml>=6.0",
    "requests",
    "flake8>=6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# flake8 config lives in .flake8 (pyproject.toml not supported natively by flake8)
